# voice-ai-travel-agent

apps/voice-server/: pyproject.toml
backend/: Untitled
backend/pipecat-quickstart/server/: bot.py  pyproject.toml
backend/pipecat-quickstart/server/frames/: flight_frames.py
backend/pipecat-quickstart/server/processors/: flight_processor.py  intent_processor.py
backend/pipecat-quickstart/server/services/: __init__.py  flights_service.py
backend/pipecat-quickstart/server/tests/: test_flight_service.py
