[project]
name = "pipecat-quickstart"
version = "0.1.0"
description = "Voice AI bot built with Pipecat"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "pipecat-ai[cartesia,daily,deepgram,google,groq,runner,silero,webrtc]",
    "pipecatcloud",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]
